fixed logo moving off center on smaller screens

--- a/user-registration-app/src/app/app.component.css
+++ b/user-registration-app/src/app/app.component.css
@@ -82,6 +82,12 @@ nav .right {
   margin-right: -0vw;
 }
 
+@media screen and (max-width: 768px) {
+  .brand-logo {
+    margin-left: 0px !important;
+  }  
+}
+
 .dropdown-content li>a, .dropdown-content li>span {
   color: #103147;
 }
